// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Declarations: should compile a const with default value 1`] = `
"• \`Const\` **stringConstWithDefaultValue**: \`\`\\"hello\\"\`\`

[partial: member.sources]
"
`;

exports[`Declarations: should compile a let with default value 1`] = `
"• \`Let\` **stringLetWithDefaultValue**: \`string\` = \`'hello'\`

[partial: member.sources]
"
`;

exports[`Declarations: should compile an undefined declaration 1`] = `
"• \`Let\` **undefinedNumberDeclaration**: \`number\`

[partial: member.sources]
"
`;

exports[`Declarations: should compile any function type 1`] = `
"Ƭ **AnyFunctionType**<\`A\`\\\\>: (...\`input\`: \`any\`[]) => \`A\`

#### Type parameters

| Name | Type |
| :------ | :------ |
| \`A\` | \`any\` |

#### Type declaration

▸ (...\`input\`): \`A\`

##### Parameters

| Name | Type |
| :------ | :------ |
| \`...input\` | \`any\`[] |

##### Returns

\`A\`

[partial: member.sources]
"
`;

exports[`Declarations: should compile callable declaration 1`] = `
"• \`Let\` **callableDeclaration**: \`Object\`

#### Call signature

▸ (\`someArg\`): \`boolean\`

##### Parameters

| Name | Type |
| :------ | :------ |
| \`someArg\` | \`number\` |

##### Returns

\`boolean\`

#### Type declaration

| Name | Type |
| :------ | :------ |
| \`arg1\` | \`string\` |
| \`arg2\` | \`number\` |

[partial: member.sources]
"
`;

exports[`Declarations: should compile declaration with double underscores in name and value 1`] = `
"• \`Const\` **\\\\_\\\\_DOUBLE\\\\_UNDERSCORES\\\\_DECLARATION\\\\_\\\\_**: typeof [\`__DOUBLE_UNDERSCORES_DECLARATION__\`](../modules.md#__double_underscores_declaration__)

[partial: member.sources]
"
`;

exports[`Declarations: should compile enum delcaration 1`] = `
"• **Down** = \`\\"DOWN\\"\`

[partial: member.sources]
"
`;

exports[`Declarations: should compile function declaration 1`] = `
"• \`Let\` **functionDeclaration**: (\`someArg\`: \`number\`) => \`boolean\`

[partial: member.sources]
"
`;

exports[`Declarations: should compile indexable declaration 1`] = `
"• \`Let\` **indexableDeclaration**: \`Object\`

#### Index signature

▪ [index: \`number\`]: \`string\`

#### Type declaration

| Name | Type |
| :------ | :------ |
| \`arg1\` | \`string\` |

[partial: member.sources]
"
`;

exports[`Declarations: should compile object literal cast as a const 1`] = `
"• \`Const\` **objectLiteralAsConstDeclaration**: \`Object\`

Comments

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| \`Prop1\` | \`\`\\"Prop1\\"\`\` | Comment for Prop1. |
| \`Prop2\` | \`\`\\"Prop2\\"\`\` | Comment for Prop2. |
| \`Prop3\` | \`\`\\"Prop3\\"\`\` | - |

[partial: member.sources]
"
`;

exports[`Declarations: should compile object literal declaration 1`] = `
"• \`Const\` **objectLiteralDeclaration**: \`Object\`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| \`valueA\` | \`number\` | - |
| \`valueB\` | \`boolean\` | - |
| \`valueC\` | \`Object\` | - |
| \`valueX\` | \`Object\` | description for valueX |
| \`valueX.valueA\` | \`number\`[] | - |
| \`valueX.valueZ\` | \`string\` | - |
| \`valueY\` | () => \`string\` | description for valueY |
| \`valueZ\` | \`string\` | description for valueZ |

[partial: member.sources]
"
`;

exports[`Declarations: should compile type literal declaration 1`] = `
"• \`Let\` **typeLiteralDeclaration**: \`Object\`

#### Type declaration

| Name | Type | Description |
| :------ | :------ | :------ |
| \`valueA?\` | \`number\` | Comments for valueA |
| \`valueB?\` | \`boolean\` | - |
| \`valueX\` | \`Object\` | Comment for valueX |
| \`valueX.valueA\` | \`number\`[] | - |
| \`valueX.valueY\` | (\`z\`: \`string\`) => { \`a\`: \`string\` ; \`b\`: \`string\`  } | - |
| \`valueX.valueZ\` | \`string\` | Nested comment for valueZ |
| \`valueY\` | () => \`string\` | - |
| \`valueZ\` | \`string\` | Comment for valueZ |

[partial: member.sources]
"
`;
